--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Inventory Control</title>
+  <title>TEST</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
@@ -67,7 +67,7 @@
         <!-- <button type="button" class="close" data-dismiss="modal">&times;</button>-->
         <div class="container">
 
-<form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+<form method="post">
     <div class="form-group">
       <input style="border-color:coral" type="text" class="form-control" id="email" placeholder="User Name" name="username"/>
     </div>
@@ -82,12 +82,9 @@
       <button type="button" class="btn btn-danger" data-dismiss="modal" style="background-color:salmon; border-color:salmon">Close</button>
     </div>
 </form>
-
 	</div>
         </div>
-        
         <!-- Modal footer -->
-        
       </div>
     </div>
   </div>
