--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>TEST</title>
+  <title>TamilStrings</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
@@ -32,7 +32,7 @@
 </style>
 
 <nav class="shadow-sm navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color:coral;">
-  <a class="navbar-brand" href="#">Inventory Control</a>
+  <a class="navbar-brand" href="#">TEST</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -45,7 +45,7 @@
         <a class="nav-link" href="#">Features</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="#">About</a>
       </li>
     </ul>
     <span class="navbar-text"></span>
