--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#">About</a>
       </li>
+      <li class="nav-item">
+      <a class="nav-link"><div id="txt"></div></a>
+      </li>
     </ul>
     <span class="navbar-text"></span>
     <span class="navbar-text">
@@ -90,7 +93,7 @@
   </div>
 </div>
 </head>
-<body>
+<body onload="startTime()">
 <div class="container">
 <br/>
 <br/>
@@ -110,6 +113,41 @@
 <p style="border-top-style: solid; border-top-color: coral;"></p>
 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
 </div>
+
+  <script>
+
+    function startTime() 
+    {
+      var today = new Date();
+      var day = today.getDate();
+      var month = today.getMonth()+1;
+      var year = today.getFullYear();
+      var h = today.getHours();
+      var m = today.getMinutes();
+      var da = today.getDay();
+      var s = today.getSeconds();
+      day = checkTime(day);
+      month = checkTime(month);
+      m = checkTime(m);
+      s = checkTime(s);
+      var am="AM";
+      if(h > 12)
+      {
+        am="PM";
+        h-=12;
+      }
+      das=['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
+      var ddds=das[da];
+      document.getElementById('txt').innerHTML = "<b>Date:</b> " + day + "/" + month + "/" + year + ", " + ddds + " " + "<b>Time:</b> " + h + ":" + m + ":" + s +" "+ am;
+      var t = setTimeout(function () { startTime() }, 500);
+    }
+
+    function checkTime(i) {
+      if (i < 10) { i = "0" + i };  // add zero in front of numbers < 10
+      return i;
+    }
+</script>
+
 </body>
 </html>
 
