--- a/index.html
+++ b/index.html
@@ -1,126 +1,158 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>TamilStrings</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <link href="new.png" rel="icon" type="image/png" />
 
-<style>
-.bd-callout-warning {
-    border-left-color: #f0ad4e;
-}
-.bd-callout {
-    padding: 1.25rem;
-    margin-top: 1.25rem;
-    margin-bottom: 1.25rem;
-    border: 1px solid #eee;
-    border-left-width: .25rem;
-    border-radius: .25rem;
-}
+  <style>
+    .bd-callout-warning {
+      border-left-color: #f0ad4e;
+    }
 
-.btn-primary.focus#new-logn-btn, .btn-primary:focus#new-logn-btn
-{
-    border-color:coral
-    box-shadow:0 0 0 0.2rem rgba(255, 186, 38, 0.61);
-}
-</style>
+    .bd-callout {
+      padding: 1.25rem;
+      margin-top: 1.25rem;
+      margin-bottom: 1.25rem;
+      border: 1px solid #eee;
+      border-left-width: .25rem;
+      border-radius: .25rem;
+    }
 
-<nav class="shadow-sm navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color:coral;">
-  <a class="navbar-brand" href="#">TEST</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link"><div id="txt"></div></a>
-      </li>
-    </ul>
-    <span class="navbar-text"></span>
-    <span class="navbar-text">
-    <button type="button" id="new-logn-btn" class="btn btn-primary float-right" data-toggle="modal" data-target="#myModal"  style="background-color:coral; border-color:coral;">Login</button>
-    </span>
+    .btn-primary.focus#new-logn-btn,
+    .btn-primary:focus#new-logn-btn {
+      border-color: coral box-shadow:0 0 0 0.2rem rgba(255, 186, 38, 0.61);
+    }
+  </style>
 
-  </div>
-</nav>
+  <nav class="shadow-sm navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color:coral;">
+    <a class="navbar-brand" href="#">TEST</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">
+            <div id="txt"></div>
+          </a>
+        </li>
+      </ul>
+      <span class="navbar-text"></span>
+      <span class="navbar-text">
+        <button type="button" id="new-logn-btn" class="btn btn-primary float-right" data-toggle="modal"
+          data-target="#myModal" style="background-color:coral; border-color:coral;">Login</button>
+      </span>
 
-<div class="container">
-  <!-- Button to Open the Modal -->
-  <!-- The Modal -->
-  <div class="modal fade" id="myModal">
-    <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-    <p style="border-top-style: solid; border-top-width: 5px; border-top-color: coral;"></p>
-    <div class="modal-body">
-        <!-- <button type="button" class="close" data-dismiss="modal">&times;</button>-->
-        <div class="container">
-
-<form method="post">
-    <div class="form-group">
-      <input style="border-color:coral" type="text" class="form-control" id="email" placeholder="User Name" name="username"/>
     </div>
-    <div class="form-group">
-      <input style="border-color:coral" type="password" class="form-control" id="pwd" placeholder="Password" name="pwd"/>
-      <p sytle="color:red">ERROR</p>
-    </div>
-    <div class="float-right" role="group">
-      <!--<button type="submit" class="btn btn-success" style="background-color:coral; border-color:coral;">Login</button>-->
-      <button type="submit" class="btn btn-success" style="background-color:coral; border-color:coral;">Login</button>
+  </nav>
 
-      <button type="button" class="btn btn-danger" data-dismiss="modal" style="background-color:salmon; border-color:salmon">Close</button>
-    </div>
-</form>
-	</div>
+  <div class="container">
+    <!-- Button to Open the Modal -->
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <p style="border-top-style: solid; border-top-width: 5px; border-top-color: coral;"></p>
+          <div class="modal-body">
+            <!-- <button type="button" class="close" data-dismiss="modal">&times;</button>-->
+            <div class="container">
+
+              <form method="post">
+                <div class="form-group">
+                  <input style="border-color:coral" type="text" class="form-control" id="email" placeholder="User Name"
+                    name="username" />
+                </div>
+                <div class="form-group">
+                  <input style="border-color:coral" type="password" class="form-control" id="pwd" placeholder="Password"
+                    name="pwd" />
+                  <p sytle="color:red">ERROR</p>
+                </div>
+                <div class="float-right" role="group">
+                  <!--<button type="submit" class="btn btn-success" style="background-color:coral; border-color:coral;">Login</button>-->
+                  <button type="submit" class="btn btn-success"
+                    style="background-color:coral; border-color:coral;">Login</button>
+
+                  <button type="button" class="btn btn-danger" data-dismiss="modal"
+                    style="background-color:salmon; border-color:salmon">Close</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          <!-- Modal footer -->
         </div>
-        <!-- Modal footer -->
       </div>
     </div>
   </div>
-</div>
 </head>
+
 <body onload="startTime()">
-<div class="container">
-<br/>
-<br/>
-<h3>What is Lorem Ipsum?</h3>
-<p style="border-top-style: solid; border-top-color: coral;"></p>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-<h3>Why do we use it?</h3>
-<p style="border-top-style: solid; border-top-color: coral;"></p>
-<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-<h3>Where does it come from?</h3>
-<p style="border-top-style: solid; border-top-color: coral;"></p>
-<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-<div class="bd-callout bd-callout-warning">
-<p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
-</div>
-<h3>Where can I get some?</h3>
-<p style="border-top-style: solid; border-top-color: coral;"></p>
-<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
-</div>
+  <div class="container">
+    <br />
+    <br />
+    <h3>What is Lorem Ipsum?</h3>
+    <p style="border-top-style: solid; border-top-color: coral;"></p>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+      standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+      type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+      remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+      Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+      of Lorem Ipsum.</p>
+    <h3>Why do we use it?</h3>
+    <p style="border-top-style: solid; border-top-color: coral;"></p>
+    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at
+      its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
+      opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing
+      packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
+      uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
+      accident, sometimes on purpose (injected humour and the like).</p>
+    <h3>Where does it come from?</h3>
+    <p style="border-top-style: solid; border-top-color: coral;"></p>
+    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin
+      literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
+      College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and
+      going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes
+      from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
+      written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first
+      line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+    <div class="bd-callout bd-callout-warning">
+      <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+        1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original
+        form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+    </div>
+    <h3>Where can I get some?</h3>
+    <p style="border-top-style: solid; border-top-color: coral;"></p>
+    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+      form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a
+      passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All
+      the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first
+      true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model
+      sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always
+      free from repetition, injected humour, or non-characteristic words etc.</p>
+  </div>
 
   <script>
 
-    function startTime() 
-    {
+    function startTime() {
       var today = new Date();
       var day = today.getDate();
-      var month = today.getMonth()+1;
+      var month = today.getMonth() + 1;
       var year = today.getFullYear();
       var h = today.getHours();
       var m = today.getMinutes();
@@ -130,15 +162,14 @@
       month = checkTime(month);
       m = checkTime(m);
       s = checkTime(s);
-      var am="AM";
-      if(h > 12)
-      {
-        am="PM";
-        h-=12;
+      var am = "AM";
+      if (h > 12) {
+        am = "PM";
+        h -= 12;
       }
-      das=['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
-      var ddds=das[da];
-      document.getElementById('txt').innerHTML = "<b>Date:</b> " + day + "/" + month + "/" + year + ", " + ddds + " " + "<b>Time:</b> " + h + ":" + m + ":" + s +" "+ am;
+      das = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
+      var ddds = das[da];
+      document.getElementById('txt').innerHTML = "<b>Date:</b> " + day + "/" + month + "/" + year + ", " + ddds + " " + "<b>Time:</b> " + h + ":" + m + ":" + s + " " + am;
       var t = setTimeout(function () { startTime() }, 500);
     }
 
@@ -146,8 +177,8 @@
       if (i < 10) { i = "0" + i };  // add zero in front of numbers < 10
       return i;
     }
-</script>
+  </script>
 
 </body>
-</html>
 
+</html>
